@@ -27,6 +27,11 @@
     <field name="ID" start="21" end="21"/>
   </flags>
 
+  <struct id="i387_ext_s">
+    <field name="b64" type="uint64"/>
+    <field name="b16" type="uint16"/>
+  </struct>
+
   <reg name="eaxs2" bitsize="32" type="int32"/>
   <reg name="ecxs2" bitsize="32" type="int32"/>
   <reg name="edxs2" bitsize="32" type="int32"/>
@@ -45,14 +50,14 @@
   <reg name="fss2" bitsize="32" type="int32"/>
   <reg name="gss2" bitsize="32" type="int32"/>
 
-  <reg name="st0s2" bitsize="80" type="i387_ext"/>
-  <reg name="st1s2" bitsize="80" type="i387_ext"/>
-  <reg name="st2s2" bitsize="80" type="i387_ext"/>
-  <reg name="st3s2" bitsize="80" type="i387_ext"/>
-  <reg name="st4s2" bitsize="80" type="i387_ext"/>
-  <reg name="st5s2" bitsize="80" type="i387_ext"/>
-  <reg name="st6s2" bitsize="80" type="i387_ext"/>
-  <reg name="st7s2" bitsize="80" type="i387_ext"/>
+  <reg name="st0s2" bitsize="80" type="i387_ext_s"/>
+  <reg name="st1s2" bitsize="80" type="i387_ext_s"/>
+  <reg name="st2s2" bitsize="80" type="i387_ext_s"/>
+  <reg name="st3s2" bitsize="80" type="i387_ext_s"/>
+  <reg name="st4s2" bitsize="80" type="i387_ext_s"/>
+  <reg name="st5s2" bitsize="80" type="i387_ext_s"/>
+  <reg name="st6s2" bitsize="80" type="i387_ext_s"/>
+  <reg name="st7s2" bitsize="80" type="i387_ext_s"/>
 
   <reg name="fctrls2" bitsize="32" type="int" group="float"/>
   <reg name="fstats2" bitsize="32" type="int" group="float"/>
