@@ -7,15 +7,15 @@
 
 <!DOCTYPE feature SYSTEM "gdb-target.dtd">
 <feature name="org.gnu.gdb.i386.sse.valgrind.s2">
-  <vector id="v4f" type="ieee_single" count="4"/>
-  <vector id="v2d" type="ieee_double" count="2"/>
+  <vector id="v4f_s" type="uint32" count="4"/>
+  <vector id="v2d_s" type="uint64" count="2"/>
   <vector id="v16i8" type="int8" count="16"/>
   <vector id="v8i16" type="int16" count="8"/>
   <vector id="v4i32" type="int32" count="4"/>
   <vector id="v2i64" type="int64" count="2"/>
-  <union id="vec128">
-    <field name="v4_float" type="v4f"/>
-    <field name="v2_double" type="v2d"/>
+  <union id="vec128_s">
+    <field name="v4_float" type="v4f_s"/>
+    <field name="v2_double" type="v2d_s"/>
     <field name="v16_int8" type="v16i8"/>
     <field name="v8_int16" type="v8i16"/>
     <field name="v4_int32" type="v4i32"/>
@@ -39,14 +39,14 @@
     <field name="FZ" start="15" end="15"/>
   </flags>
 
-  <reg name="xmm0s2" bitsize="128" type="vec128"/>
-  <reg name="xmm1s2" bitsize="128" type="vec128"/>
-  <reg name="xmm2s2" bitsize="128" type="vec128"/>
-  <reg name="xmm3s2" bitsize="128" type="vec128"/>
-  <reg name="xmm4s2" bitsize="128" type="vec128"/>
-  <reg name="xmm5s2" bitsize="128" type="vec128"/>
-  <reg name="xmm6s2" bitsize="128" type="vec128"/>
-  <reg name="xmm7s2" bitsize="128" type="vec128"/>
+  <reg name="xmm0s2" bitsize="128" type="vec128_s"/>
+  <reg name="xmm1s2" bitsize="128" type="vec128_s"/>
+  <reg name="xmm2s2" bitsize="128" type="vec128_s"/>
+  <reg name="xmm3s2" bitsize="128" type="vec128_s"/>
+  <reg name="xmm4s2" bitsize="128" type="vec128_s"/>
+  <reg name="xmm5s2" bitsize="128" type="vec128_s"/>
+  <reg name="xmm6s2" bitsize="128" type="vec128_s"/>
+  <reg name="xmm7s2" bitsize="128" type="vec128_s"/>
 
   <reg name="mxcsrs2" bitsize="32" type="i386_mxcsr" group="vector"/>
 </feature>
